# nodepp

./: .gitignore  CMakeLists.txt  README.md  WHITEPAPER.md  compile.sh  main.cpp
.github/workflows/: main.yml
benchmark/gc_benchmark/: readme.md
benchmark/server_benchmark/: nodepp_benchmark.cpp  nodepp_benchmark_parallel.cpp  nodepp_cluster_benchmark.cpp  readme.md
benchmark/stress-test/: 0-http.cpp  1-ws.cpp  10-POST.cpp  11-chunk-encoding.cpp  3-worker.cpp  4-event.cpp  5-event-loop.cpp  6-promise.cpp  7-invoker.cpp  8-multi-thread-event.cpp  9-reactive-worker.cpp
benchmark/task_benchmark/: nodepp_benchmark.cpp  nodepp_worker_benchmark.cpp
benchmark/valgrind_benchmark/: 2-event.cpp  5-promise.cpp  6-file.cpp  7-zlib.cpp  readme.md
benchmark/websocket_test/: http_client.cpp  http_server.js  ws_client.cpp  ws_server.js
examples/: 0-Terminal_Color.cpp  0-fibonacci_sequence.cpp  0-stl_interop.cpp  0-zero-copy.cpp  1-Console.cpp  1-Coroutine.cpp  1-IntType.cpp  10-Invoker-Ofuscation.cpp  10-invoker.cpp  11-File.cpp  11-ReadLine.cpp  11-ReadStreams.cpp  11-reusable_stream.cpp  11-std_IO_stream.cpp  12-Advance-HTTP-Server.cpp  12-Coroutine.cpp  12-HTTP-Client.cpp  12-JsonParse.cpp  12-Simple-HTTP-Server.cpp  13-Advance-HTTPS-Server.cpp  13-HTTP-Client.cpp  13-HTTP-WS-server.cpp  13-HTTPS-Client.cpp  13-HTTPS-WSS-server.cpp  13-Simple-HTTPS-Server.cpp  14-Connect-to-API.cpp  14-Event.cpp  14-HTTP-Socket.cpp  14-Post-Fetch.cpp  14-Post-Request.cpp  14-Real-Time-HTML-Render.cpp  14-Reusable-Stream.cpp  14-WaitEvent.cpp  15-HTTP.cpp  15-TCP.cpp  15-TLS.cpp  15-UDP.cpp  15-WS.cpp  15-WSS.cpp  16-Asyn_Promises.cpp  (+102 more)
examples/0-isolated-module/: CMakeLists.txt  main.cpp  module1.cpp  module1.h  module2.cpp  module2.h
include/nodepp/: any.h  array.h  atomic.h  channel.h  cluster.h  cookie.h  coroutine.h  crypto.h  date.h  debug.h  dssl.h  encoder.h  event.h  evloop.h  except.h  expected.h  file.h  fs.h  function.h  generator.h  http.h  https.h  import.h  initializer.h  invoke.h  iterator.h  json.h  kernel.h  limit.h  loop.h  macros.h  map.h  mutex.h  nodepp.h  object.h  observer.h  optional.h  path.h  poll.h  popen.h  (+29 more)
include/nodepp/posix/: cluster.cpp  cluster.h  conio.cpp  conio.h  dns.cpp  dns.h  env.cpp  env.h  epoll.cpp  epoll.h  file.cpp  file.h  fs.cpp  fs.h  kernel.h  kpoll.cpp  kpoll.h  limit.cpp  limit.h  mutex.cpp  mutex.h  npoll.cpp  npoll.h  os.cpp  os.h  poll.cpp  popen.cpp  popen.h  serial.cpp  sleep.cpp  sleep.h  socket.cpp  socket.h  uring.h  worker.cpp  worker.h
include/nodepp/windows/: atomic.h  cluster.cpp  cluster.h  conio.cpp  conio.h  dns.cpp  dns.h  env.cpp  env.h  file.cpp  file.h  fs.cpp  fs.h  kernel.h  limit.cpp  limit.h  mutex.cpp  mutex.h  os.cpp  os.h  pipe.cpp  poll.cpp  popen.cpp  popen.h  serial.cpp  sleep.cpp  sleep.h  socket.cpp  socket.h  worker.cpp  worker.h
stress-test/: 0-http.cpp  1-ws.cpp  3-worker.cpp  4-event.cpp  5-event-loop.cpp  6-promise.cpp  7-invoker.cpp  8-multi-thread-event.cpp
test/: CMakeLists.txt  any.cpp  array.cpp  compile.sh  cookie.cpp  dns.cpp  event.cpp  expected.cpp  file.cpp  function.cpp  http.cpp  json.cpp  listener.cpp  loop.cpp  main  main.cpp  map.cpp  optional.cpp  path.cpp  promise.cpp  ptr.cpp  query.cpp  queue.cpp  regex.cpp  string.cpp  tuple.cpp  url.cpp  variant.cpp  wait.cpp  worker.cpp  ws.cpp
